# hal_nuvoton

./: CMakeLists.txt  parced.txt  parcer.py
dts/m2354/: clk.h  clk_reg.h  sys.h  sys_reg.h
dts/pinctrl/: m2354kjfae-pinctrl.h  m2354ljfae-pinctrl.h  m2354sjfae-pinctrl.h
m2354/: CMakeLists.txt
m2354/Devices/M2354/Include/: system_M2354.h
m2354/Devices/M2354/Source/: CMakeLists.txt
m2354/StdDriver/: CMakeLists.txt
m48x/Devices/M480/Source/: system_M480.c
m48x/StdDriver/: CMakeLists.txt
m48x/StdDriver/src/: spim.c
zephyr/: module.yml
